static/css/critique.css
/* ... */
.entry-list .entry-title { padding-right: 26px; }
.entry-list .entry-body { -ms-flex: 1; flex: 1; }
.entry-list .entry-footer { margin-right: 24px; }


/* Chunks
   ========================================================================== */

.chunks {
    padding: 0 20px;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -ms-flex-pack: center;
    justify-content: center; }
.chunks ul {
    padding: 10px 0;
    margin: 0 -16px -1px -16px;
    border-top: 1px solid #a57100;
    border-bottom: 1px solid #a57100;
    width: 100%; }
.chunks li {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    margin: 0 30px; }
.chunks li { color: #bd4700 !important; }
.chunks li:hover { color: #f7a300 !important; }
.chunks li span { color: black !important; }

#collection.chunks ul { max-width: 380px; }
#collection.artiste-oeuvres.chunks ul { max-width: 520px; }
#seances.chunks ul, #cinema-seances.chunks ul { max-width: 600px; }
#cinemas.chunks ul { max-width: 440px; }
#cinemas-elsewhere.chunks ul { max-width: 490px; }
_:-ms-fullscreen, :root #cinemas.chunks { height: 2298px; } /* IE 11 */
@media (min-width: 870px) {
_:-ms-fullscreen, :root #cinemas.chunks { height: 1176px; } /* IE 11 */ }
@media (min-width: 1800px) {
_:-ms-fullscreen, :root #cinemas.chunks { height: 588px; } /* IE 11 */ }


/* Content Preambule
   ========================================================================== */

#preambule { margin-top: -14px; margin-bottom: 20px; }
#preambule .hentry { max-width: 860px; width: 100%; }
#preambule .entry-title { padding-bottom: 12px; }
#preambule .entry-content {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-direction: column;
    flex-direction: column;
    -ms-flex-align: center;
    align-items: center; }
#preambule .entry-content ul { margin-top: 10px; margin-bottom: 18px; }
#preambule .entry-content li { padding: 2px 0; }
#preambule .entry-content li:first-child { padding-top: 0; }
#preambule .entry-content li:last-child { padding-bottom: 0; }
#preambule .entry-section {
    max-width: 750px;
    width: 100%; }
#preambule hr {
    max-width: none;
    border-bottom-color: #a57100; }


/* Content Artiste
   ========================================================================== */

.artiste-oeuvres { max-width: 1200px; }
#artiste-info { margin-top: 38px; margin-bottom: 24px; }


/* Content Oeuvres
   ========================================================================== */

#collection.oeuvres-homonymes {
    position: absolute;
    top: 42.8%;
    left: -1.2%;
    width: 100%; }


/* Content Cinemas
   ========================================================================== */

#cinemas-intro1 { margin-top: -14px; margin-bottom: 20px; }
#cinemas-intro1 .entry-title { padding-bottom: 12px; }
#cinemas-intro2 { margin-top: 20px; }
#cinemas-intro2 .hentry { width: 100%; }
#cinemas-intro2 .entry-footer { overflow-x: hidden; }
#cinemas-intro2 #cinemas_total { margin-top: 8px; }
#cinema-info { margin-top: 38px; margin-bottom: 24px; }
#cinemas-intro2 hr {
    position: relative;
    left: 50%;
    transform: translateX(-50%);
    width: 113%;
    max-width: none;
    margin-top: 33px;
    margin-bottom: 16px;
    border-bottom-color: #a57100; }
#cinemas-elsewhere-intro { margin-bottom: 19px; }
#cinemas-elsewhere { margin-bottom: 21px; }


/* Content Seance
   ========================================================================== */

#cinema-seances { margin-bottom: 14px; }


/* Content Top Films
   ========================================================================== */

#top_films { max-width: 1320px; }
#top_films.all_time { max-width: 1400px; }


/* Content Top Jeux
   ========================================================================== */

#top_jeux { max-width: 1150px; }


/* ==========================================================================
/* Forms
/* ========================================================================== */

/* Forms Oeuvre
   ========================================================================== */

#oeuvre_form .form_inputs,
#oeuvre_form_empty .form_inputs { margin-top: 0; }
#oeuvre_form p,
#oeuvre_form_empty p { width: 350px; }
#oeuvre_form p label,
#oeuvre_form_empty p label { width: 130px; }
#oeuvre_form p label[for="id_mtype"],
#oeuvre_form p label[for="id_year"],
#oeuvre_form p label[for="id_envie"],
#oeuvre_form_empty p label[for="id_empty_mtype"],
#oeuvre_form_empty p label[for="id_empty_year"],
#oeuvre_form_empty p label[for="id_empty_envie"] { width: 92.7px; }
#oeuvre_form .form_buttons,
#oeuvre_form_empty .form_buttons { margin-top: -4px; }
#oeuvre_form .form_buttons .filler { width: 32px; }
#oeuvre_form_empty .form_buttons .filler { width: 44px; }
@media (max-width: 400px) {
#oeuvre_form p,
#oeuvre_form_empty p { width: 265px; }
#oeuvre_form p label,
#oeuvre_form_empty p label { width: 108px; }
#oeuvre_form p label[for="id_envie"],
#oeuvre_form p label[for="id_mtype"],
#oeuvre_form_empty p label[for="id_empty_envie"],
#oeuvre_form_empty p label[for="id_empty_mtype"] { width: 74.8px; }
#oeuvre_form .form_buttons .filler { width: 18px; }}

#oeuvre_form .form_inputs[data-mtype="album"] p[data-input="id_title_vo"],
#oeuvre_form .form_inputs[data-mtype="jeu"] p[data-input="id_title_vo"],
#oeuvre_form :not(.form_inputs[data-mtype="film"]) p[data-input="id_title_alt"],
#oeuvre_form :not(.form_inputs[data-mtype="film"]) p[data-input="id_imdb_id"],
#oeuvre_form_empty .form_inputs[data-mtype="album"] p[data-input="id_empty_title_vo"],
#oeuvre_form_empty .form_inputs[data-mtype="jeu"] p[data-input="id_empty_title_vo"],
#oeuvre_form_empty :not(.form_inputs[data-mtype="film"]) p[data-input="id_empty_title_alt"],
#oeuvre_form_empty :not(.form_inputs[data-mtype="film"]) p[data-input="id_empty_imdb_id"] { display: none; }
/* ... */

